--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>hello</h1>
-    <a href="./郭翔.pdf" download="123456.pdf">下载</a>
+    <a href="./111.pdf" download="123456.pdf">下载111</a>
   </body>
 </html>
