--- a/index.html
+++ b/index.html
@@ -2,11 +2,192 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>云南人社表单验证</title>
+    <style>
+      html {
+        /*
+        100 * (屏幕尺寸 / 设计基准尺寸)
+
+        以iPhone6 plus为基准
+        100 * ( 414 / 1080 ) = 38.333333333333336px
+        1vw = 414/100 = 4.14px
+        root = 38.333333333333336 / 4.14 = 9.259259259259261vw
+
+        以iPhone6为基准
+        100 * ( 375 / 750 ) = 50px
+        1vw = 375/100 = 3.75px
+        root = 50 / 3.75 = 13.333333333333334vw
+      */
+        font-size: 13.333333333333334vw;
+      }
+      body {
+        font-family: helvetica;
+        max-width: 750px;
+        margin: 0 auto;
+        font-size: 0;
+      }
+      body * {
+        -webkit-user-select: none;
+        -webkit-touch-callout: none;
+        -webkit-text-size-adjust: 100%;
+      }
+      a,
+      button,
+      input {
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      }
+      button,
+      input {
+        -webkit-appearance: none;
+        border-radius: 0;
+      }
+      a {
+        text-decoration: none;
+        color: inherit;
+      }
+      input {
+        outline: none;
+        vertical-align: middle;
+        padding: 0;
+      }
+      ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+      }
+      img {
+        vertical-align: middle;
+      }
+      h1,
+      h2,
+      h3,
+      h4,
+      p {
+        margin: 0;
+      }
+      button {
+        border: none;
+        background-color: transparent;
+      }
+      .title {
+        font-size: 0.3rem;
+        text-align: center;
+        padding: 0.64rem 0;
+        color: #f66400;
+      }
+      .tip {
+        width: 6.9rem;
+        height: 3.5rem;
+        margin: 0.3rem auto;
+      }
+      .tip img {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+      .text,
+      .code {
+        width: 6.34rem;
+        height: 0.54rem;
+        border: 1px solid #d4d4d4;
+        margin: 0 auto;
+      }
+      .text input,
+      .code input {
+        height: 100%;
+        background-color: #f8f8f8;
+        color: #1c1c1c;
+        border: none;
+        padding-left: 0.2rem;
+        box-sizing: border-box;
+      }
+      .text input {
+        width: 100%;
+      }
+      .code {
+        display: flex;
+        flex-direction: row;
+        margin-top: 0.3rem;
+      }
+      .code input {
+        width: 4.5rem;
+        background-color: #f8f8f8;
+        border-right: 1px solid #d4d4d4;
+      }
+      .code input::placeholder {
+        color: #696969;
+      }
+      .code i {
+        width: 1.84rem;
+        height: 100%;
+        line-height: 0.54rem;
+        font-size: 0.3rem;
+        text-align: center;
+      }
+      .btn {
+        margin-top: 1.5rem;
+        text-align: center;
+      }
+      .btn span {
+        position: relative;
+        display: inline-block;
+        font-size: 0.3rem;
+        width: 2.32rem;
+        height: 0.68rem;
+        line-height: 0.68rem;
+        text-align: center;
+        color: #fff;
+        background-color: #f66400;
+        cursor: pointer;
+      }
+      .btn span::before,
+      .btn span::after {
+        content: '';
+        display: inline-block;
+        width: 0.68rem;
+        height: 0.68rem;
+        border-radius: 50%;
+        position: absolute;
+        background-color: #f66400;
+      }
+      .btn span::before {
+        left: 0;
+        top: 0;
+        transform: translateX(-50%);
+      }
+      .btn span::after {
+        right: 0;
+        top: 0;
+        transform: translateX(50%);
+      }
+    </style>
   </head>
   <body>
-    <h1>hello</h1>
-    <a href="./111.pdf" download="123456.pdf">下载111</a>
+    <div class="wrap">
+      <h1 class="title">云南人社电子表单在线验证平台</h1>
+      <div class="tip">
+        <img src="./tip.jpg" />
+      </div>
+      <div class="text">
+        <input type="text" value="ebc6c249662545b7b89410412c52fb02" />
+      </div>
+      <div class="code">
+        <input type="text" placeholder="请输入图片的验证码" />
+        <i>EFFH</i>
+      </div>
+      <div class="btn">
+        <span id="down">查询</span>
+      </div>
+    </div>
   </body>
+  <script>
+    var btn = document.querySelector('#down')
+    btn.addEventListener('click', e => {
+      alert('验证码错误')
+    })
+  </script>
 </html>
