--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       }
       .code i {
         width: 1.84rem;
-        height: 100%;
+        height: 0.54rem;
         line-height: 0.54rem;
         font-size: 0.3rem;
         text-align: center;
@@ -131,6 +131,11 @@
       .btn {
         margin-top: 1.5rem;
         text-align: center;
+      }
+      .btn a {
+        display: inline-block;
+        width: 3rem;
+        height: 0.68rem;
       }
       .btn span {
         position: relative;
@@ -164,6 +169,10 @@
         top: 0;
         transform: translateX(50%);
       }
+      #canv {
+        width: 1.84rem;
+        height: 0.54rem;
+      }
     </style>
   </head>
   <body>
@@ -176,18 +185,128 @@
         <input type="text" value="ebc6c249662545b7b89410412c52fb02" />
       </div>
       <div class="code">
-        <input type="text" placeholder="请输入图片的验证码" />
-        <i>EFFH</i>
+        <input type="text" placeholder="请输入图片的验证码" id="val" />
+        <i id="codeBox"><canvas id="canv" width="100" height="50"></canvas></i>
       </div>
       <div class="btn">
-        <span id="down">查询</span>
+        <a href="" id="downBox"><span id="down">查询</span></a>
       </div>
     </div>
   </body>
   <script>
-    var btn = document.querySelector('#down')
-    btn.addEventListener('click', e => {
-      alert('验证码错误')
-    })
+    ;(function (window, document) {
+      var hash = location.hash
+      alert(hash)
+      var btn = document.getElementById('down')
+      var downBox = document.getElementById('downBox')
+      var val = document.getElementById('val')
+      var codeBox = document.getElementById('codeBox')
+      var canv = document.getElementById('canv')
+      var ctx = canv.getContext('2d')
+      var code = getCode()
+      var testResault = false
+      renderText(code)
+      btn.addEventListener('touchend', () => {
+        testResault = testCode()
+        if (testResault) {
+          toDownLoad()
+        } else {
+          resetText()
+        }
+      })
+      codeBox.addEventListener('touchend', () => {
+        resetText()
+      })
+      downBox.addEventListener('touchend', (e) => {
+        if (!testResault) {
+          e.preventDefault()
+        }
+      })
+      function toDownLoad() {
+        downBox.href = './resource/test.pdf'
+      }
+      function clear() {
+        val.value = ''
+        ctx.clearRect(0, 0, 100, 50)
+      }
+      function testCode() {
+        var value = val.value.toString().trim().toLowerCase()
+        var text = code.toString().trim().toLowerCase()
+        if (value === text) {
+          val.value = ''
+          return true
+        } else {
+          alert('验证码错误')
+          return false
+        }
+      }
+      function resetText() {
+        code = getCode()
+        clear()
+        renderText(code)
+      }
+      function renderText(code) {
+        for (var i = 0; i < code.length; i++) {
+          drawWord(code[i], getRandom(5, 8, true) / 10, i, getRandom(-5, 5))
+        }
+      }
+      function drawWord(word, size, num, deg) {
+        var info = getInfo(num)
+        ctx.beginPath()
+        ctx.fillStyle = info.color
+        ctx.font = size + 'rem' + ' Roboto'
+        ctx.save()
+        ctx.rotate((deg * Math.PI) / 180)
+        ctx.fillText(word, info.x, info.y)
+        ctx.restore()
+      }
+      function getInfo(num) {
+        switch (num) {
+          case 0:
+            return {
+              color: '#b9c616',
+              x: 10,
+              y: 45,
+            }
+          case 1:
+            return {
+              color: '#875a85',
+              x: 30,
+              y: 41,
+            }
+          case 2:
+            return {
+              color: '#62d137',
+              x: 50,
+              y: 38,
+            }
+          case 3:
+            return {
+              color: '#1a5c96',
+              x: 70,
+              y: 35,
+            }
+        }
+      }
+      function getCode() {
+        var code = ''
+        // 65-90
+        // 97-122
+        for (var i = 0; i < 4; i++) {
+          if (Math.random() > 0.5) {
+            code += String.fromCharCode(getRandom(65, 90, true))
+          } else {
+            code += String.fromCharCode(getRandom(97, 122, true))
+          }
+        }
+        return code
+      }
+      function getRandom(min, max, includeMax) {
+        if (includeMax) {
+          return Math.floor(Math.random() * (max - min + 1) + min)
+        }
+        return Math.floor(Math.random() * (max - min) + min)
+      }
+    })(window, document)
   </script>
 </html>
