--- a/show.html
+++ b/show.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <title>checkReport.do(586x740)</title>
-    <style>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/><title>checkReport.do(586x740)</title><style>
       html {
         /*
         100 * (屏幕尺寸 / 设计基准尺寸)
@@ -84,16 +75,8 @@
       .wrap .img {
         width: 100%;
       }
-    </style>
-  </head>
-  <body>
-    <div class="wrap">
-      <img src="" class="img" />
-    </div>
-    <script>
+    </style></head><body><div class="wrap"> <img src="" class="img"/></div><script>
       var img = document.querySelector('.img')
       var hash = location.hash.replace(/#/g, '')
-      img.src = './resource/' + hash + '.png'
-    </script>
-  </body>
-</html>
+      img.src = './images/' + hash + '.png'
+    </script></body></html>
