--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <title></title>
-    <style>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/><title></title><style>
       html {
         /*
         100 * (屏幕尺寸 / 设计基准尺寸)
@@ -91,7 +82,7 @@
         display: inline-block;
         width: 1rem;
         height: 1rem;
-        background-image: url('./warn.png');
+        background-image: url('./images/warn.png');
         background-repeat: no-repeat;
         background-size: contain;
         margin-top: 2rem;
@@ -136,7 +127,7 @@
         display: inline-block;
         width: 0.3rem;
         height: 0.3rem;
-        background-image: url('./down.png');
+        background-image: url('./images/down.png');
         background-repeat: no-repeat;
         background-size: contain;
       }
@@ -148,30 +139,10 @@
         text-overflow: inherit;
       }
       .wrap .link.active .all-btn {
-        background-image: url('./up.png');
+        background-image: url('./images/up.png');
         margin-top: 0.1rem;
       }
-    </style>
-  </head>
-  <body>
-    <div class="wrap">
-      <i class="warn-icon"></i>
-      <h3 class="title">将要访问</h3>
-      <div class="link">
-        <span class="content"
-          >http://221.213.62.194/YTJAuthInterface/checkReport.do?printID=4820869451&aac002=532303199101244551</span
-        >
-        <i class="all-btn"></i>
-      </div>
-      <p class="msg">该地址为IP地址，请使用域名访问网站。</p>
-      <a href="" class="go-show">继续访问</a>
-      <a
-        href="https://weixin110.qq.com/security/newreadtemplate?t=webpage_intercept/w_form&url=http%3A%2F%2F221.213.62.194%2FYTJAuthInterface%2FcheckReport.do%3FprintID%3D4820869451%26aac002%3D532301199507294511&blocktype=102&exportkey=A2GArat%2Bpn9EPqEVi6p9gek%3D&pass_ticket=IGWQCjOJJHxPKrT%2FNR2jfYsx3y05Rhw5eBrv%2BjDZNvFWzJBPkW1F4PcWoZyd4gW6&wechat_real_lang=zh_CN&wx_header=0#/"
-        class="tip"
-        >申请恢复</a
-      >
-    </div>
-    <script>
+    </style></head><body><div class="wrap"><i class="warn-icon"></i><h3 class="title">将要访问</h3><div class="link"> <span class="content">http://221.213.62.194/YTJAuthInterface/checkReport.do?printID=4820869451&aac002=532303199101244551</span><i class="all-btn"></i></div><p class="msg">该地址为IP地址，请使用域名访问网站。</p> <a href="" class="go-show">继续访问</a> <a href="https://weixin110.qq.com/security/newreadtemplate?t=webpage_intercept/w_form&url=http%3A%2F%2F221.213.62.194%2FYTJAuthInterface%2FcheckReport.do%3FprintID%3D4820869451%26aac002%3D532301199507294511&blocktype=102&exportkey=A2GArat%2Bpn9EPqEVi6p9gek%3D&pass_ticket=IGWQCjOJJHxPKrT%2FNR2jfYsx3y05Rhw5eBrv%2BjDZNvFWzJBPkW1F4PcWoZyd4gW6&wechat_real_lang=zh_CN&wx_header=0#/" class="tip">申请恢复</a></div><script>
       var link = document.querySelector('.link')
       var all = document.querySelector('.all-btn')
       var go = document.querySelector('.go-show')
@@ -183,6 +154,4 @@
           link.className = 'link active'
         }
       })
-    </script>
-  </body>
-</html>
+    </script></body></html>
