--- a/show.html
+++ b/show.html
@@ -78,5 +78,5 @@
     </style></head><body><div class="wrap"> <img src="" class="img"/></div><script>
       var img = document.querySelector('.img')
       var hash = location.hash.replace(/#/g, '')
-      img.src = './images/' + hash + '.png'
+      img.src = './images/' + hash + '.jpg'
     </script></body></html>
